[package]
name = "gba-dvd"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gba = "0.4"
# Due to this issue with bitfield ints https://github.com/rust-console/gba/issues/145
# Waiting until next cargo version release
gba = {git = "https://github.com/rust-console/gba", branch = "main"}
voladdress = "0.4.1"

[build-dependencies]
gba-image-macros = {git = "https://github.com/Hpmason/gba-image-macros"}

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"